<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">338090816379469</string>


    <string name="app_name">SoShopBeta</string>
    <string name="title_section1">SoShop Feed</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Explore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="signin_text_label">Please Sign in</string>
    <string name="sign_in_button_label">Sign In</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="username_edit_text_hint">Email</string>
    <string name="sign_up_label">Sign Up!</string>
    <string name="login_error_message">Please make sure you enter username and password</string>
    <string name="login_error_title">Error logging in</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_sign_up_with_facebook">SignUpWithFacebookActivity</string>
    <string name="sign_up_header">Sign Up</string>
    <string name="sign_up_button_label">Sign Up!</string>
    <string name="confirm_password_edit_text_hint">Confirm password</string>
    <string name="singup_error_title">Oops!</string>
    <string name="signup_error_message">Please put in all field</string>
    <string name="confirm_password_not_match_alert_message">Confirm password does not match</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="caption_edit_text_hint">Say something about your item(s).</string>
    <string name="location_name_hint">Shop/Store/Location</string>
    <string name="post_error_title">Post Failed!</string>
    <string name="post_error_message">Please fill in your item name and price.</string>
    <string name="soshop_button_label">SoShop</string>
    <string name="comment_button_label">comment</string>
    <string name="noshop_button_label">NoShop</string>
    <string name="title_activity_full_post">FullPostActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>

</resources>
