<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="soshop.social.soshop.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_header"
        android:id="@+id/signUpTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="40dp"/>

    <EditText
        android:id="@+id/firstNameEditText"
        android:hint="Firstname"
        android:layout_below="@+id/signUpTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:hint="Lastname"
        android:layout_below="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailAsUserNameEditText"
        android:layout_below="@+id/lastNameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:hint="@string/username_edit_text_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:layout_below="@+id/emailAsUserNameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/password_edit_text_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirmPasswordEditText"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/confirm_password_edit_text_hint" />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_label"
        android:id="@+id/signUpButton"
        android:layout_below="@+id/confirmPasswordEditText"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignBottom="@+id/signUpTextView"
        android:layout_toRightOf="@+id/signUpTextView"
        android:layout_toEndOf="@+id/signUpTextView" />

</RelativeLayout>
